# bevy_chatter

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
chatter_game/: Cargo.toml
chatter_game/src/: main.rs
chatter_lib/: Cargo.toml
chatter_lib/src/: lib.rs
chatter_lib/src/ai/: mod.rs
chatter_lib/src/camera/: mod.rs
chatter_lib/src/ui/: mod.rs
