[package]
name = "chatter_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.11.2" }
#bevy = {git = "https://github.com/J-acob/bevy.git", branch = "device_arc_clone", version = "0.11.2"}
chatter_lib = { path = "../chatter_lib", version = "0.1.0"}
